tests/snapshots/conformance__n_incomplete_true.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[tru]
stdout --- 
<empty>
stderr --- 
error: unexpected character `t`. expected start of a json value
 --> stdin:1:2
  |
1 | [tru]
  |  ^
